# sn-grok

./: .gitignore  .pre-commit-config.yaml  README.md  Sn_Circuits.ipynb  calculate_cosets.py  data_vs_init_sweep.yml  finetune_grok.py  fourier_analysis.ipynb  getting_started.ipynb  make_sweep_data.py  mlp_vis.ipynb  partitions.ipynb  power_analysis.ipynb  ray_sweep.py  replication_sweep.yaml  requirements-dev.txt  requirements.txt  s6_subgroups.json  s6_sweep.yml  setup.cfg  subgroups.ipynb  sweep.ipynb  sweep.py  train_addembed.py  train_dist.py  train_grok.py  train_grok_modular.py  train_ray.py  train_restart.py  train_transformer.py
configs/: a4_mlp.toml  a5_mlp.toml  a6_mlp.toml  d60_mlp_0.toml  s3s3s3_mlp_0.toml  s4_mlp.toml  s4s4_mlp.toml  s5_2layer.toml  s5_40_sweep.toml  s5_50_addembed.toml  s5_50_gelu.toml  s5_50_huge_sweep.toml  s5_50_large_sweep.toml  s5_50_silu.toml  s5_experiment.toml  s5_experiments.toml  s5_finetune_mlp.toml  s5_lr_5.toml  s5_mlp.toml  s5_transformer.toml  s6_mlp_0.toml  s6_mlp_1.toml  s6_mlp_2.toml  s6_mlp_3.toml  s6_mlp_4.toml  s6_mlp_5.toml  s6_mlp_6.toml  s6_mlp_7.toml  s6_mlp_sweep.toml  s7_mlp_0.toml
notebooks/: cyclic_exploration.ipynb  irreps_subgroups.ipynb  layers.ipynb  logit_attribution.ipynb  logits.ipynb  mlp_vis.ipynb  other_neurons.ipynb  paper_graphs.ipynb  progress_measures.ipynb  s6_subgroups.ipynb  small_replication.ipynb  subgroups.ipynb  sweep.ipynb  toy_circuits.ipynb
sngrok/: cosets.py  cyclic_irreps.py  dihedral.py  dihedral_irreps.py  fourier.py  groups.py  irreps.py  permutations.py  product_permutations.py  proper_subgroups.py  tableau.py  toy_code.py  utils.py
sngrok/data/: __init__.py  sn_dataset.py
sngrok/model/: __init__.py  finetune_mlp.py  mlp.py
tests/: conftest.py  test_irreps.py  test_tableau.py
