[metadata]
name = sn-grok
version = 0.0.1
author = Dashiell Stander
author_email = dash.stander@gmail.com
url = https://github.com/dashstander/sn-grok
description = Investigations into grokking the symmetric group S_n
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    accelerate
    confection
    einops
    polars
    scipy
    torch
    tqdm
    wandb
