[metadata]
name = sn-grok
version = 0.0.1
author = Dashiell Stander
author_email = dashiell@eleuther.ai
url = https://github.com/dashstander/sn-grok
description = Investigations into grokking the symmetric group S_n
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    catalogue
    confection
    einops
    numpy
    polars
    scipy
    torch
    tqdm
    wandb

[options.extras_require]
dev =
    black
    isort
    flake8
    pre-commit
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs*
    tests*

[flake8]
max-complexity = 10
max-line-length = 127
# flake8 error codes: https://flake8.pycqa.org/en/latest/user/error-codes.html
# pycodestyle codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E203 # whitespace before ‘,’, ‘;’, or ‘:’
# E741 # do not use variables named ‘l’, ‘O’, or ‘I’
# F401 # module imported but unused
# F821 # undefined name name
# W503 # line break before binary operator
# W605 # invalid escape sequence ‘x’
ignore =
    E203
    E741
    F821
    W503
    W605
per-file-ignores = __init__.py:F401,loading.py:F401
exclude =
    .git
    __pycache__
    docs/source/conf.py
    build
    dist